--- a/index.html
+++ b/index.html
@@ -845,21 +845,21 @@ fabric swatches, and examples of trims and embellishments.</li>
 <!--AssignmentBar Attached Popup END---></section>
 <!--AssignmentBar Five END---> 
 <!--AssignmentBar Six START--->
-<section class="assignment--bar" id="assignment6" onclick="myFunction('assignment6PopUp')" style="grid-column: 2 / span 1; grid-row: 4;">Richs to Rags Part One <!--AssignmentBar Attached Popup START--->
+<section class="assignment--bar" id="assignment6" onclick="myFunction('assignment6PopUp')" style="grid-column: 2 / span 1; grid-row: 4;">Riches to Rags Part One <!--AssignmentBar Attached Popup START--->
 <div class="assignment__detail" id="assignment6PopUp" style="top: calc(100% + 10px); display: none;"><!--Assignment Bar Popup Content--->
 <p class="assignment__text" style="font-size: 12px;">Present work during class</p>
 </div>
 <!--AssignmentBar Attached Popup END---></section>
 <!--AssignmentBar Six END---> 
 <!--AssignmentBar Seven START--->
-<section class="assignment--bar" id="assignment7" onclick="myFunction('assignment7PopUp')" style="grid-column: 1 / span 1; grid-row: 5;">Richs to Rags Final Due <!--AssignmentBar Attached Popup START--->
+<section class="assignment--bar" id="assignment7" onclick="myFunction('assignment7PopUp')" style="grid-column: 1 / span 1; grid-row: 5;">Riches to Rags Final Due <!--AssignmentBar Attached Popup START--->
 <div class="assignment__detail" id="assignment7PopUp" style="top: calc(100% + 10px); display: none;"><!--Assignment Bar Popup Content--->
 <p class="assignment__text" style="font-size: 12px;">Submit assignment via Blackboard</p>
 </div>
 <!--AssignmentBar Attached Popup END---></section>
 <!--AssignmentBar Seven END---> 
 <!--AssignmentBar Eight START--->
-<section class="assignment--bar" id="assignment8" onclick="myFunction('assignment8PopUp')" style="grid-column: 2 / span 1; grid-row: 5;">Richs to Rags Critique <!--AssignmentBar Attached Popup START--->
+<section class="assignment--bar" id="assignment8" onclick="myFunction('assignment8PopUp')" style="grid-column: 2 / span 1; grid-row: 5;">Riches to Rags Critique <!--AssignmentBar Attached Popup START--->
 <div class="assignment__detail" id="assignment8PopUp" style="top: calc(100% + 10px); display: none;"><!--Assignment Bar Popup Content--->
 <p class="assignment__text" style="font-size: 12px;">Bring garment(s) to class for review</p>
 </div>
