Moved Riches to Rags Final

--- a/index.html
+++ b/index.html
@@ -854,15 +854,15 @@ fabric swatches, and examples of trims and embellishments.</li>
 <!--AssignmentBar Attached Popup END---></section>
 <!--AssignmentBar Six END---> 
 <!--AssignmentBar Seven START--->
-<section class="assignment--bar" id="assignment7" onclick="myFunction('assignment7PopUp')" style="grid-column: 3 / span 1; grid-row: 5;">Riches to Rags Final Due <!--AssignmentBar Attached Popup START--->
-<div class="assignment__detail" id="assignment7PopUp" style="top: calc(100% + 10px); display: none;"><!--Assignment Bar Popup Content--->
-<p class="assignment__text" style="font-size: 12px;">Submit assignment via Blackboard</p>
+<section class="assignment--bar" id="assignment7" onclick="myFunction('assignment7PopUp')" style="grid-column: 2 / span 1; grid-row: 5;">Riches to Rags Final Due <!--AssignmentBar Attached Popup START--->
+<div class="assignment__detail" id="assignment7PopUp" style="top: calc(100% + 7px); display: none;"><!--Assignment Bar Popup Content--->
+<p class="assignment__text" style="font-size: 12px;">Submit assignment via Blackboard by end of class</p>
 </div>
 <!--AssignmentBar Attached Popup END---></section>
 <!--AssignmentBar Seven END---> 
 <!--AssignmentBar Eight START--->
-<section class="assignment--bar" id="assignment8" onclick="myFunction('assignment8PopUp')" style="grid-column: 4 / span 1; grid-row: 5;">Riches to Rags Critique <!--AssignmentBar Attached Popup START--->
-<div class="assignment__detail" id="assignment8PopUp" style="top: calc(100% + 10px); display: none;"><!--Assignment Bar Popup Content--->
+<section class="assignment--bar" id="assignment8" onclick="myFunction('assignment8PopUp')" style="grid-column: 2 / span 1; grid-row: 5;">Riches to Rags Critique <!--AssignmentBar Attached Popup START--->
+<div class="assignment__detail" id="assignment8PopUp" style="top: calc(100% + 5px); display: none;"><!--Assignment Bar Popup Content--->
 <p class="assignment__text" style="font-size: 12px;">Bring garment(s) to class for review</p>
 </div>
 <!--AssignmentBar Attached Popup END---></section>
